[package]
name = "rust_on_lan"
version = "0.1.0"
authors = ["Hrafnskogr <hrafnskogr@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsock = { git = "https://github.com/hrafnskogr/rsock" }
clap = ">=2.0.0"
